--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -14,8 +14,19 @@ spring:
       maximum-pool-size: 12 #连接池最大连接数，默认是10
       minimum-idle: 10 #最小空闲连接数量
       pool-name: SPHHikariPool # 连接池名称
+    # 文件上传配置
+    servlet:
+      multipart:
+        max-file-size: 100MB
+        max-request-size: 150MB
 
 #用于打印框架生成的sql语句，便于调试
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+minio:
+  endpoint: http://192.168.80.128:9000
+  access-key: admin123
+  secret-key: admin123
+  bucket-name: stgy
